# UniprotU

./: README.md  pyproject.toml
src/uniprotu/: __init__.py  rest_api_utils.py  uniprot_utils.py
tests/: usage_example.py
