[project]
name = "uniprotu"
version = "0.1.2"
description = "UniProt utils."
readme = "README.md"
authors = [
    { name = "yoramzarai", email = "yoram.zarai@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
